[package]
name = "calc"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
colored = "2.0.0"
rust_decimal = "1.24"
rust_decimal_macros = "1.24"