[package]
name = "plus"
version = "1.2.2"
edition = "2021"
exclude = [
"/rc.hist.txt"
]
authors = ["notmysql"]
description = "The only CLI calculator you'll ever need"
license = "MIT"


[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
colored = "2.0.0"
exitcode = "1.1.2"
rustyline = "9.1.0"
